--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-icons": "^4.10.1",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.15.0",
+    "disqus-react": "^1.0.0",
     "swiper": "^10.2.0"
   },
   "devDependencies": {
